<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.velev.eventreminder.views.eventDetailsViewTest.EventDetailsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            style="@style/text_title"
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/text_label"
            android:id="@+id/lbl_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_name"
            android:text="@string/description"/>

        <TextView
            style="@style/text_paragraph"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_description"
            android:layout_below="@+id/lbl_description"/>

        <TextView
            style="@style/text_label"
            android:id="@+id/lbl_start_on"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_description"
            android:text="@string/starting_on"/>

        <TextView
            style="@style/text_label"
            android:id="@+id/tv_starting_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/lbl_start_on"
            android:layout_toRightOf="@+id/lbl_start_on"
            android:layout_toEndOf="@+id/lbl_start_on"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"/>

        <TextView
            style="@style/text_label"
            android:id="@+id/lbl_remains"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lbl_start_on"
            android:text="@string/remaining_time"/>

        <TextView
            android:id="@+id/tv_timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_starting_date"
            android:layout_alignBaseline="@+id/lbl_remains"
            android:layout_toRightOf="@+id/lbl_remains"
            android:layout_toEndOf="@+id/lbl_remains"
            android:textColor="@color/colorSucceed"/>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="10dp"
            android:src="@drawable/ic_edit" />


    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
