<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.velev.eventreminder.views.createEventView.CreateEventActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/vg_set_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/lbl_set_date"
                style="@style/text_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="18dp"
                android:layout_marginStart="18dp"
                android:text="@string/set_date" />

            <TextView
                android:id="@+id/tv_date"
                style="@style/text_secondary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lbl_set_date"
                android:layout_marginLeft="18dp"
                android:layout_marginStart="18dp"
                android:layout_marginTop="0dp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:layout_below="@+id/tv_date"
                android:background="@color/colorInfo" />

        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/vg_set_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/vg_set_date">

            <TextView
                android:id="@+id/lbl_set_time"
                style="@style/text_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="18dp"
                android:layout_marginStart="18dp"
                android:text="@string/set_time" />

            <TextView
                android:id="@+id/tv_time"
                style="@style/text_secondary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lbl_set_time"
                android:layout_marginLeft="18dp"
                android:layout_marginStart="18dp"
                android:layout_marginTop="0dp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:layout_below="@+id/tv_time"
                android:background="@color/colorInfo" />

        </RelativeLayout>


        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/vg_set_time"
            android:layout_marginTop="8dp"
            android:hint="Event name" />

        <EditText
            android:id="@+id/et_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_name"
            android:layout_marginTop="8dp"
            android:hint="description" />

        <Button
            android:id="@+id/btn_create_event"
            style="@style/btn_primary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/create_event" />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
